Footer link + style

--- a/public/event/index.html
+++ b/public/event/index.html
@@ -216,7 +216,7 @@ Loading template
 
         </div>
     </div>
-    <div class="event-reviews bg-dark vh-100">
+    <div class="event-reviews mt-5 bg-transparent vh-75">
         <div class="container"></div>
     </div>
 </div>
