--- a/public/register/index.html
+++ b/public/register/index.html
@@ -43,16 +43,10 @@
                             </div>
                         </div>
 
-                        <!-- old calendar
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-md" for="inputBirthDate">Birth date</label>
-                            <input type="date" class="col-6 form-control bobooky text-warning" id="inputBirthDate" placeholder="Birth date" required>
-                        -->
-
                         <div class="dates form-group col-12 col-md-5 mt-md-3">
                             <input type="text" class="form-control bobooky text-warning" name="birthdate" id="usr1" name="event_date"
                                     autocomplete="off" required>
-                            <label class="col-form-label-md form-control-placeholder" for="usr1">Birth date</label>
+                            <label class="col-form-label-md form-control-placeholder" for="usr1">Birth date (yyyy-mm-dd)</label>
                         </div>
                         <div class="invalid-feedback">
                             Please choose a valid date.
