Fixed cart & orders bugs.

--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -32,8 +32,8 @@
             <div class="modal-body" id="modal-addresses-list">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="continue-modal-button">Continue</button>
+                <button type="button" class="btn btn-outline-primary rounded-bobooky" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary rounded-bobooky" id="continue-modal-button">Continue</button>
             </div>
         </div>
     </div>
