--- a/public/profile/edit/index.html
+++ b/public/profile/edit/index.html
@@ -18,7 +18,7 @@
 <body class="bg-dark">
 
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder" color="pink"></div>
+<div class="breadcrumb-placeholder" color="secondary"></div>
 <div class="section container main text-white">
     <div class="row">
         <div class="col-12 mt-5">
