Added favicon and last details.

--- a/public/about/shipping/index.html
+++ b/public/about/shipping/index.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
 
 </head>
