--- a/public/book/index.html
+++ b/public/book/index.html
@@ -7,6 +7,8 @@
     <title>Book</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/components/loading/loading.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
